[package]
name = "discord-ooh-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "model", "cache"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
rand = "0.8"
lindera = { version = "2.2", features = ["embed-ipadic"] }
